# Informes-Periciales

./: .gitignore  README.md  app.py  pyproject.toml
agentes/: __init__.py  formal_causal_agent.py
docs/: GUIA_COMPLETA.md
static/css/: informe.css  mapa_conceptual.css  mapa_mental.css  revisar_motivaciones.css  styles.css
static/js/: informe.js  main.js  mapa_conceptual.js  mapa_mental.js  revisar_motivaciones.js
templates/: index.html  informe.html  mapa_conceptual.html  mapa_conceptual_v2.html  revisar_motivaciones.html
